Changed GMS lookup to use new global RegistryClient
git-svn-id: https://opencadc.googlecode.com/svn/trunk@710 728ff76a-78ac-11de-a72b-d90af8dea425