@@ -70,6 +70,8 @@
 package ca.nrc.cadc.vos.server.web.restlet;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 import org.apache.log4j.Logger;
@@ -78,8 +80,9 @@ import org.restlet.Context;
 import org.restlet.Restlet;
 
 import ca.nrc.cadc.gms.client.GmsClient;
-import ca.nrc.cadc.gms.client.GmsRegistryClient;
+import ca.nrc.cadc.reg.client.RegistryClient;
 import ca.nrc.cadc.vos.InvalidServiceException;
+import ca.nrc.cadc.vos.VOS;
 import ca.nrc.cadc.vos.server.util.BeanUtil;
 
 /**
@@ -126,18 +129,25 @@ public class VOSpaceNodesApplication extends Application
         createContextBean(context, ca.nrc.cadc.vos.server.NodePersistence.class, BeanUtil.VOS_NODE_PERSISTENCE);
         
         // Get the endpoint URL for the gms client through the registry
-        String gmsBaseURL = new GmsRegistryClient().getBaseURL();
+        URL gmsBaseURL = null;
         
         // Create the GmsClient and store it in the application context
         try
         {
-            GmsClient gmsClient = new GmsClient(new URL(gmsBaseURL));
+            RegistryClient registryClient = new RegistryClient();
+            gmsBaseURL = registryClient.getServiceURL(new URI(VOS.GMS_SERVICE_URI), VOS.GMS_PROTOCOL);
+            GmsClient gmsClient = new GmsClient(gmsBaseURL);
             context.getAttributes().put(BeanUtil.GMS_CLIENT, gmsClient);
         }
         catch (MalformedURLException e)
         {
             throw new IllegalStateException(String.format(
                     "GmsClient baseURL malformed: %s", gmsBaseURL));
+        }
+        catch (URISyntaxException e)
+        {
+            throw new IllegalStateException(String.format(
+                    "Invalid GMS Service URI: %s", VOS.GMS_SERVICE_URI));
         }
         
         return new VOSpaceNodesRouter(context);
