@@ -69,13 +69,15 @@ package ca.nrc.cadc.vos.auth;
 import static org.easymock.classextension.EasyMock.createMock;
 import static org.easymock.classextension.EasyMock.replay;
 
+import java.net.URI;
 import java.net.URL;
 
 import org.junit.Before;
 import org.junit.Test;
 
 import ca.nrc.cadc.gms.client.GmsClient;
-import ca.nrc.cadc.gms.client.GmsRegistryClient;
+import ca.nrc.cadc.reg.client.RegistryClient;
+import ca.nrc.cadc.vos.VOS;
 import ca.nrc.cadc.vos.server.NodeDAO;
 import ca.nrc.cadc.vos.server.auth.VOSpaceAuthorizer;
 
@@ -85,6 +87,7 @@ import ca.nrc.cadc.vos.server.auth.VOSpaceAuthorizer;
  */
 public class VOSpaceAuthorizerTest
 {
+    
     private VOSpaceAuthorizer testSubject;
     private NodeDAO mockNodeDAO;
 
@@ -95,7 +98,8 @@ public class VOSpaceAuthorizerTest
         setMockNodeDAO(createMock(NodeDAO.class));
         VOSpaceAuthorizer vospaceAuthorizer = new VOSpaceAuthorizer();
         vospaceAuthorizer.setNodePersistence(getMockNodeDAO());
-        URL gmsBaseURL = new URL(new GmsRegistryClient().getBaseURL());
+        RegistryClient registryClient = new RegistryClient();
+        URL gmsBaseURL = registryClient.getServiceURL(new URI(VOS.GMS_SERVICE_URI), VOS.GMS_PROTOCOL);
         vospaceAuthorizer.setGmsClient(new GmsClient(gmsBaseURL));
         setTestSubject(vospaceAuthorizer);
     }
